@@ -24,7 +24,9 @@ java {
 application {
     mainModule = 'com.crschnick.pdx_unlimiter.app'
     mainClass = 'com.crschnick.pdx_unlimiter.app.PdxuApp'
-    applicationDefaultJvmArgs = ["-Djdk.gtk.version=2", "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix" ]
+    applicationDefaultJvmArgs = ["-Djdk.gtk.version=2",
+                                 "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+                                 "--add-opens", "java.base/java.lang.reflect=com.jfoenix"]
 }
 
 javafx {
